--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,17 @@
 Django==1.6.5
 South==1.0
+amqp==1.4.5
+anyjson==0.3.3
+billiard==3.3.0.18
+celery==3.1.13
 dj-database-url==0.3.0
 dj-static==0.0.6
+django-celery==3.1.10
 django-toolbelt==0.0.1
 gunicorn==19.1.0
+kombu==3.0.21
+pika==0.9.14
 psycopg2==2.5.3
+pytz==2014.4
 static3==0.5.1
 wsgiref==0.1.2
